fix: align and update height of checkboxes for table with selections feature

--- a/packages/cascara/src/components/Table/atoms/Checkbox/Checkbox.module.scss
+++ b/packages/cascara/src/components/Table/atoms/Checkbox/Checkbox.module.scss
@@ -1,3 +1,5 @@
 ._ {
   width: 24px;
+  height: 24px;
+  align-self: center;
 }
